# Codeforge

./: .dockerignore  .env.example  .env.oidc.example  .env.production.template  .env.qdrant.example  .env.razorpay.example  .gitignore  Cheap Claude‑Code Alternative (1).md  DEPLOYMENT_RUNBOOK.md  EC2_Runbook.md  INDEX.md  PRD.md  README.md  Tech Stack Question.md  docker-compose.dev.yml  docker-compose.microservices.yml  docker-compose.prod.yml  package-lock.json  package.json  playwright.config.js
.codeforge/: AGENTS.md  agent-workflow.yaml  loop-engineering.yaml  magic-pointer.yaml  supermemory.json.example
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: AGENT_REACH.md  API.md  LOCAL_VERIFICATION_REPORT.md  OCI_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  agent-extensions.md  authentication.md  client-architecture.md  cursor-parity-blueprint.md  deployment-assets-setup.md  frontend-architecture.md  implementation-plan.md  magic-pointer.md  microservices.md  oidc-idp-checklist.md  phases-7-10-developer-guide.md  product-roadmap.md  production-domains.md  qdrant-ecs-setup.md  razorpay-webhook-setup.md
e2e/: a11y.spec.js  smoke.spec.js
scripts/: _patch_session_access.py  api_smoke_test.sh  audit-web-routes.mjs  bootstrap_oci_vault.py  bootstrap_oidc_ssm.py  bootstrap_qdrant_ssm.py  bootstrap_razorpay_ssm.py  dev-host.mjs  docker-image-sizes.mjs  ec2-bootstrap.sh  ensure-docker-env.mjs  free-web-port.mjs  patch_ecs_oidc_enabled.py  patch_ecs_public_urls.py  patch_ecs_worker_efs.py  preaudit-web.mjs  (+6 more)
(+445 files in other folders)
